[package]
name = "stake-ebpf-check"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["plain"]
bnum = ["dep:bnum"]
plain = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
crypto-bigint = { version = "0.6.1", default-features = false }
bnum = { version = "0.13.0", default-features = false, optional = true }
